--- a/src/Resources/app/administration/src/component/flow-sequence/action-order-ship-modal/action-order-ship-modal.scss
+++ b/src/Resources/app/administration/src/component/flow-sequence/action-order-ship-modal/action-order-ship-modal.scss
@@ -3,7 +3,7 @@
 .mollie-payments-flowsequence-action-order-ship-modal {
     .mollie-payments-flowsequence-action-order-ship-modal__description-title {
         font-weight: $font-weight-bold;
-        font-size: $font-size-default;
+        font-size: 14px;
         text-align: center;
     }
 
