MOL-877: fix csrf twig on subscriptions pages

--- a/src/Resources/views/storefront/page/account/subscriptions/subscription-item.html.twig
+++ b/src/Resources/views/storefront/page/account/subscriptions/subscription-item.html.twig
@@ -56,9 +56,12 @@
                                               class="order-table-header-context-menu-content-form"
                                               data-add-to-cart="true">
 
-                                            {% block page_account_subscriptions_item_context_menu_reorder_form_csrf %}
-                                                {{ sw_csrf('frontend.checkout.line-item.add') }}
-                                            {% endblock %}
+                                            {% if mollie_csrf_available %}
+                                                {% block page_account_subscriptions_item_context_menu_reorder_form_csrf %}
+                                                    {% sw_include '@MolliePayments/storefront/csrf/account/subscriptions-index-context-menu-reorder.twig' %}
+                                                {% endblock %}
+                                            {% endif %}
+
 
                                             {% block page_account_subscriptions_item_context_menu_reorder_form_redirect %}
                                                 <input type="hidden" name="redirectTo" value="frontend.cart.offcanvas"/>
@@ -103,9 +106,13 @@
                                                   method="post"
                                                   data-form-csrf-handler="true"
                                                   class="order-table-header-context-menu-content-form">
-                                                {% block page_account_subscriptions_item_context_menu_update_payment_form_csrf %}
-                                                    {{ sw_csrf('frontend.account.mollie.subscriptions.payment.update') }}
-                                                {% endblock %}
+
+                                                {% if mollie_csrf_available %}
+                                                    {% block page_account_subscriptions_item_context_menu_update_payment_form_csrf %}
+                                                        {% sw_include '@MolliePayments/storefront/csrf/account/subscriptions-index-context-menu-update-payment.twig' %}
+                                                    {% endblock %}
+                                                {% endif %}
+
                                                 {% block page_account_subscriptions_item_context_menu_update_payment_form_button %}
                                                     <button class="order-table-header-context-menu-content-link" type="submit">
                                                         {{ "molliePayments.subscriptions.account.mollieSubscriptionUpdatePayment"|trans|sw_sanitize }}
@@ -124,9 +131,13 @@
                                                       method="post"
                                                       data-form-csrf-handler="true"
                                                       class="order-table-header-context-menu-content-form">
-                                                    {% block page_account_subscriptions_item_context_menu_pause_form_csrf %}
-                                                        {{ sw_csrf('frontend.account.mollie.subscriptions.pause') }}
-                                                    {% endblock %}
+
+                                                    {% if mollie_csrf_available %}
+                                                        {% block page_account_subscriptions_item_context_menu_pause_form_csrf %}
+                                                            {% sw_include '@MolliePayments/storefront/csrf/account/subscriptions-index-context-menu-pause.twig' %}
+                                                        {% endblock %}
+                                                    {% endif %}
+
                                                     {% block page_account_subscriptions_item_context_menu_pause_form_button %}
                                                         <button class="order-table-header-context-menu-content-link" type="submit">
                                                             {{ "molliePayments.subscriptions.account.mollieSubscriptionPause"|trans|sw_sanitize }}
@@ -143,9 +154,13 @@
                                                       method="post"
                                                       data-form-csrf-handler="true"
                                                       class="order-table-header-context-menu-content-form">
-                                                    {% block page_account_subscriptions_item_context_menu_resume_form_csrf %}
-                                                        {{ sw_csrf('frontend.account.mollie.subscriptions.resume') }}
-                                                    {% endblock %}
+
+                                                    {% if mollie_csrf_available %}
+                                                        {% block page_account_subscriptions_item_context_menu_resume_form_csrf %}
+                                                            {% sw_include '@MolliePayments/storefront/csrf/account/subscriptions-index-context-menu-resume.twig' %}
+                                                        {% endblock %}
+                                                    {% endif %}
+
                                                     {% block page_account_subscriptions_item_context_menu_resume_form_button %}
                                                         <button class="order-table-header-context-menu-content-link" type="submit">
                                                             {{ "molliePayments.subscriptions.account.mollieSubscriptionResume"|trans|sw_sanitize }}
@@ -164,9 +179,13 @@
                                                   method="post"
                                                   data-form-csrf-handler="true"
                                                   class="order-table-header-context-menu-content-form">
-                                                {% block page_account_subscriptions_item_context_menu_skip_form_csrf %}
-                                                    {{ sw_csrf('frontend.account.mollie.subscriptions.skip') }}
-                                                {% endblock %}
+
+                                                {% if mollie_csrf_available %}
+                                                    {% block page_account_subscriptions_item_context_menu_skip_form_csrf %}
+                                                        {% sw_include '@MolliePayments/storefront/csrf/account/subscriptions-index-context-menu-skip.twig' %}
+                                                    {% endblock %}
+                                                {% endif %}
+
                                                 {% block page_account_subscriptions_item_context_menu_skip_form_button %}
                                                     <button class="order-table-header-context-menu-content-link" type="submit">
                                                         {{ "molliePayments.subscriptions.account.mollieSubscriptionSkip"|trans|sw_sanitize }}
@@ -194,9 +213,11 @@
                                                   id="subscriptionsDetailForm-{{ subscriptions.Id }}"
                                                   method="post">
 
-                                                {% block page_account_subscriptions_item_context_menu_cancel_form_csrf %}
-                                                    {{ sw_csrf('frontend.account.mollie.subscriptions.cancel') }}
-                                                {% endblock %}
+                                                {% if mollie_csrf_available %}
+                                                    {% block page_account_subscriptions_item_context_menu_cancel_form_csrf %}
+                                                        {% sw_include '@MolliePayments/storefront/csrf/account/subscriptions-index-context-menu-cancel.twig' %}
+                                                    {% endblock %}
+                                                {% endif %}
 
                                                 {% block page_account_subscriptions_item_context_menu_cancel_form_line_items_input %}
                                                     {% block page_account_subscriptions_item_context_menu_cancel_form_line_item_input %}
@@ -363,9 +384,11 @@
                                                                                                                       }
                                                                                                                   ) }}">
 
-                                                                                                                {% block component_address_subscription_billing_address_form_csrf %}
-                                                                                                                    {{ sw_csrf('frontend.account.mollie.subscriptions.billing.update') }}
-                                                                                                                {% endblock %}
+                                                                                                                {% if mollie_csrf_available %}
+                                                                                                                    {% block component_address_subscription_billing_address_form_csrf %}
+                                                                                                                        {% sw_include '@MolliePayments/storefront/csrf/account/subscriptions-index-billing-update.twig' %}
+                                                                                                                    {% endblock %}
+                                                                                                                {% endif %}
 
                                                                                                                 {% block component_address_subscription_billing_address_form_hidden_inputs %}
                                                                                                                 {% endblock %}
@@ -512,9 +535,11 @@
                                                                                                                       }
                                                                                                                   ) }}">
 
-                                                                                                                {% block component_address_subscription_shipping_address_form_csrf %}
-                                                                                                                    {{ sw_csrf('frontend.account.mollie.subscriptions.shipping.update') }}
-                                                                                                                {% endblock %}
+                                                                                                                {% if mollie_csrf_available %}
+                                                                                                                    {% block component_address_subscription_shipping_address_form_csrf %}
+                                                                                                                        {% sw_include '@MolliePayments/storefront/csrf/account/subscriptions-index-shipping-update.twig' %}
+                                                                                                                    {% endblock %}
+                                                                                                                {% endif %}
 
                                                                                                                 {% block component_address_subscription_shipping_address_form_hidden_inputs %}
                                                                                                                 {% endblock %}
