--- a/src/Resources/views/storefront/page/product-detail/buy-widget-form.html.twig
+++ b/src/Resources/views/storefront/page/product-detail/buy-widget-form.html.twig
@@ -46,7 +46,10 @@
                 <form id="molliePayPalExpressProductDetailForm" action="{{ path('frontend.mollie.paypal-express.start') }}"
                       data-form-csrf-handler="true"
                       method="POST">
-                    {{ sw_csrf('frontend.mollie.paypal-express.start') }}
+                    {% if mollie_csrf_available %}
+                        {% include '@MolliePayments/storefront/csrf/components/paypal-express-button-csrf.twig' %}
+                    {% endif %}
+
                     <input type="hidden" name="productId" value="{{ product.id }}">
                     <input
                             type="hidden"
